syntax = "proto3";

package gRPCSum ;

option go_package = "gRPCSum/proto";

message SumRequest {
    int32 a = 1;
    int32 b = 2;   
}

message SumResponse {
    int32 result = 1;
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse);
}
